# NamishGuptaPrograms

./: .replit  Game 02.py  code.js  index.html  mylib.py  pyproject.toml  replit.nix
ACSL/: ACSL 01.py  ACSL 03.py
ACSL/American Computer Science League Competition Code/: ACSL 02.py
American Computer Science League Competition/: ACSL 01 Instructions  ACSL 02 Instructions  ACSL 03.py  readme
American Computer Science League Competition Code/: ACSL 01.py
Carbon Emissions Tracker/: index.html  script.js
Currency Exchange Calculator/: exchange-calculator.py  readme
Demographic Income Dashboard/: readme
Games/Other/: replit.nix
Games/Platformer Game/: main.py  readme
Games/Soccer Game/: readme
Games/SoccerGame/: main.py
Google Maps Website/: index.html  readme  script.js
Income Demographcic Dashboard/: style.css
pythonGames/: Game 01.py  pyproject.toml
