[tool.poetry]
name = "cmu-graphics-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<4.0"
numpy = "^1.25.2"
cmu-graphics = "^1.1.25"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"